<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    tools:context="io.edgedev.investment_calc.MoneyPagerActivity">

    <LinearLayout
        android:id="@+id/l_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            style="@style/detail_style"
            android:layout_weight="0.6"
            android:text="@string/month"/>

        <TextView
            style="@style/detail_style"
            android:text="@string/start"/>

        <TextView
            style="@style/detail_style"
            android:text="@string/investment"/>

        <TextView
            style="@style/detail_style"
            android:text="@string/interest"/>

        <TextView
            style="@style/detail_style"
            android:text="@string/end"/>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/money_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/l_layout"
        android:layout_above="@+id/fullscreen_content_controls">
    </android.support.v4.view.ViewPager>
    <LinearLayout
        android:id="@+id/fullscreen_content_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:orientation="horizontal"
        android:padding="8dp"
        android:layout_above="@+id/adView"
        ads:layout_constraintBottom_toBottomOf="parent"
        tools:ignore="UselessParent">
        <ImageView
            android:id="@+id/previous"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_left" />
        <ImageView
            android:id="@+id/next"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_right" />
    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_details"/>
</RelativeLayout>

