<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="money"
            type="io.edgedev.investment_calc.Money"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

            <android.support.design.widget.AppBarLayout
                android:id="@+id/appbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/collapsing_tool_bar_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingBottom="80dp"
                        android:paddingEnd="16dp"
                        android:paddingLeft="32dp"
                        android:paddingRight="16dp"
                        android:paddingStart="32dp"
                        android:paddingTop="16dp"
                        app:layout_collapseMode="parallax">

                        <android.support.design.widget.TextInputLayout
                            android:id="@+id/lNameLayout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/initialInvestment"
                                style="@style/my_custom_text_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/initial_investment"
                                tools:text="100,000"/>
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/monthlyInvestment"
                                style="@style/my_custom_text_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/monthly_investment"
                                tools:text="5,000"/>
                        </android.support.design.widget.TextInputLayout>
                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/percent_edit_text"
                                style="@style/my_custom_text_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/interest_per_annum"
                                android:maxLength="5"
                                android:inputType="numberDecimal"
                                tools:text="14.87"/>
                        </android.support.design.widget.TextInputLayout>

                        <android.support.design.widget.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp">

                            <android.support.design.widget.TextInputEditText
                                android:id="@+id/investmentTenure"
                                style="@style/my_custom_text_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/tenure_in_years"
                                android:maxLength="3"
                                tools:text="10"/>
                        </android.support.design.widget.TextInputLayout>

                        <Button
                            android:id="@+id/calc_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="end"
                            android:layout_marginBottom="8dp"
                            android:layout_marginTop="8dp"
                            android:text="@string/calculate_roi"
                            style="@style/Widget.AppCompat.Button.Colored"/>

                    </LinearLayout>

                    <android.support.v7.widget.Toolbar
                        android:id="@+id/toolbar_2"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                        app:layout_collapseMode="parallax"
                        app:layout_scrollFlags="scroll|exitUntilCollapsed"
                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
                    <!--android:minHeight="?attr/actionBarSize"-->
                </android.support.design.widget.CollapsingToolbarLayout>
            </android.support.design.widget.AppBarLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="@dimen/layout_margin"
                android:paddingBottom="80dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

        </android.support.design.widget.CoordinatorLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="@string/banner_ad_unit_main_activity">
        </com.google.android.gms.ads.AdView>
    </RelativeLayout>
</layout>